<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="teamtreehouse.com.nasaapp.ui.fragments.MainFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/sliding_tabs"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliding_tabs">
    </android.support.v4.view.ViewPager>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/replaceFrameLayout"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewPager">
    </FrameLayout>


</android.support.constraint.ConstraintLayout>
